# applattice

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
deployment/: .env.example  compose.platform.yaml  compose.yaml  npmrc.internal.example
docs/: OPEN_SOURCE_CHECKLIST.md  POSITIONING.md  RELEASING.md
platform/: app-catalog.json  app-catalog.schema.json  contracts.lock.json  service-catalog.json  service-catalog.schema.json  workspace.local.example.json
scripts/: bootstrap.ps1  check-hybrid-workspace.mjs  create-module.mjs  create-service-repo.mjs  export-hybrid-offline.ps1  (+20 more)
service-workspaces/todo-list-service/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  package.json  platform-app.manifest.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  service.manifest.json
service-workspaces/todo-list-service/contracts/: openapi.json
service-workspaces/todo-list-service/frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
service-workspaces/todo-list-service/frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
service-workspaces/todo-list-service/scripts/: export_openapi.py
service-workspaces/todo-list-service/src/service/: __init__.py  app.py  config.py  models.py  repository.py
service-workspaces/todo-list-service/tests/: test_app.py
(+166 files in other folders)
